reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__actions__defs__sleep.rs_line_24_col_5.log

*** crates/tracewake-core/src/actions/defs/sleep.rs:24:5: replace build_sleep_start_event -> Result<EventEnvelope, ActionRejection> with Ok(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/actions/defs/sleep.rs
+++ replace build_sleep_start_event -> Result<EventEnvelope, ActionRejection> with Ok(Default::default())
@@ -16,87 +16,17 @@
 use crate::time::SimTick;
 
 pub fn build_sleep_start_event(
     state: &PhysicalState,
     proposal: &Proposal,
     ordering_key: &OrderingKey,
     content_manifest_id: &ContentManifestId,
 ) -> Result<EventEnvelope, ActionRejection> {
-    let actor_id = proposal.actor_id.clone().ok_or_else(|| {
-        ActionRejection::new(
-            PipelineStage::ActorLookup,
-            ReasonCode::ActorNotFound,
-            Vec::new(),
-            "That actor cannot sleep.",
-            "sleep proposal did not include an actor",
-        )
-    })?;
-    let actor = state.actors.get(&actor_id).ok_or_else(|| {
-        ActionRejection::new(
-            PipelineStage::ActorLookup,
-            ReasonCode::ActorNotFound,
-            vec![CheckedFact::new("actor_id", actor_id.as_str())],
-            "That actor cannot sleep.",
-            "sleep actor was not present",
-        )
-    })?;
-
-    let sleep_affordance = require_sleep_affordance(state, proposal, &actor.current_place_id)?;
-
-    let duration_ticks = parse_duration_ticks(proposal)?.unwrap_or(sleep_affordance.duration_ticks);
-    let expected_completion_tick = proposal.requested_tick.advance_by(duration_ticks);
-    let mut event = EventEnvelope::new_caused_v1(
-        EventId::new(format!(
-            "event.sleep_started.{}",
-            proposal.proposal_id.as_str()
-        ))
-        .unwrap(),
-        EventKind::SleepStarted,
-        0,
-        0,
-        proposal.requested_tick,
-        ordering_key.clone(),
-        content_manifest_id.clone(),
-        vec![EventCause::Proposal(proposal.proposal_id.clone())],
-    )
-    .unwrap();
-    event.actor_id = Some(actor_id.clone());
-    event.proposal_id = Some(proposal.proposal_id.clone());
-    event.participants = vec![actor_id.to_string()];
-    event.payload = vec![
-        PayloadField::new("payload_schema_version", "1"),
-        PayloadField::new("actor_id", actor_id.as_str()),
-        PayloadField::new("duration_ticks", duration_ticks.to_string()),
-        PayloadField::new(
-            "expected_completion_tick",
-            expected_completion_tick.value().to_string(),
-        ),
-        PayloadField::new("body_exclusive", "true"),
-        PayloadField::new("fatigue_delta_at_start", "0"),
-        PayloadField::new(
-            "sleep_affordance_id",
-            sleep_affordance.sleep_affordance_id.as_str(),
-        ),
-        PayloadField::new(
-            "fatigue_recovery_per_tick",
-            sleep_affordance.fatigue_recovery_per_tick.to_string(),
-        ),
-        PayloadField::new(
-            "hunger_rise_per_tick",
-            sleep_affordance.hunger_rise_per_tick.to_string(),
-        ),
-    ];
-    if let Some(sleep_place_id) = proposal.parameters.get("sleep_place_id") {
-        event
-            .payload
-            .push(PayloadField::new("sleep_place_id", sleep_place_id));
-    }
-    event.effects_summary = "sleep started; completion is duration scheduled".to_string();
-    Ok(event)
+    Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 fn require_sleep_affordance<'a>(
     state: &'a PhysicalState,
     proposal: &Proposal,
     actor_place_id: &PlaceId,
 ) -> Result<&'a crate::state::SleepAffordanceState, ActionRejection> {
     let Some(raw_sleep_affordance_id) = proposal.parameters.get("sleep_affordance_id") else {


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/actions/defs/sleep.rs:24:8
    |
 24 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/actions/defs/sleep.rs:24:8
    |
 24 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `envelope::EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
